examples/test/testpolicy8928.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8928
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key28: value31
      key40: value22
      key3: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value20
      podSelector:
        matchLabels:
          key48: value10
          key12: value24
          key13: value34
